[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/FairfaxStationNF20.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menu/AdvancedMenu.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="AdvancedMenu" type="Control"]
theme = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 192.0
margin_top = 64.0
margin_right = 832.0
margin_bottom = 448.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
margin_left = 448.0
margin_top = 400.0
margin_right = 576.0
margin_bottom = 432.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageLabel" type="Label" parent="."]
margin_left = 208.0
margin_top = 128.0
margin_right = 291.0
margin_bottom = 156.0
text = "Language"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageButton" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 448.0
margin_top = 128.0
margin_right = 816.0
margin_bottom = 156.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundLabel" type="Label" parent="."]
margin_left = 208.0
margin_top = 168.0
margin_right = 404.0
margin_bottom = 192.0
text = "Dynamic Background"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundButton" type="CheckButton" parent="."]
margin_left = 448.0
margin_top = 168.0
margin_right = 524.0
margin_bottom = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="item_selected" from="LanguageButton" to="." method="_on_LanguageButton_item_selected"]
[connection signal="toggled" from="BackgroundButton" to="." method="_on_BackgroundButton_toggled"]
